# cryptocurrency_bot

./: .gitignore  pyproject.toml
bot/: __main__.py
bot/commands/: __init__.py  command_list.py  start.py
bot/database/: __init__.py  engine.py  user.py  user_coin.py
bot/filters/: __init__.py  is_coin_or_back.py
bot/handlers/: __init__.py  check_the_prices.py  daily_alerts.py
bot/keyboards/: __init__.py  coins_and_back.py  start.py
bot/states/: __init__.py  check_the_prices.py  daily_alerts.py
parser/: __init__.py  binance_parse.py
