[tool.poetry]
name = "cryptocurrency"
version = "0.1.0"
description = ""
authors = ["onechesz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
aiohttp = "^3.8.4"
sqlalchemy = "^2.0.7"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
